--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN=MTA2NDU5OTMzMjczNDY1MjUzNg.Gy2ufD.m0R6NbpJbYz7qES9EzGK_8grZ1P0jziMUOghHw
+TOKEN=MTA2NDU5OTMzMjczNDY1MjUzNg.GpCzxb.PnL5PqOvBroxUahasF3wWLzplIYmYY1Cb_2Hj4
 GUILDID=1058921411965616209
 CLIENTID=1064599332734652536
