Git ignore refixed

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN=MTA2NDU5OTMzMjczNDY1MjUzNg.GpCzxb.PnL5PqOvBroxUahasF3wWLzplIYmYY1Cb_2Hj4
-GUILDID=1058921411965616209
+TOKEN=MTA2NDU5OTMzMjczNDY1MjUzNg.GUS-x5.hPvWfKPG5OsGdiJ6yRp89gY0zpxT_9ByWBSx2w
+GUILDID=1058921411965616209Y
 CLIENTID=1064599332734652536
