--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "colors": "^1.4.0",
     "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "sequelize": "^6.28.0",
+    "sqlite3": "^5.1.4"
   },
   "name": "karmafans",
   "version": "1.0.0",
