--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.34",
     "colors": "^1.4.0",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4"
   },
   "name": "karmafans",
