--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "dependencies": {
     "@discordjs/voice": "^0.14.0",
     "@napi-rs/canvas": "^0.1.34",
+    "ascii-table": "^0.0.9",
     "colors": "^1.4.0",
     "discord.js": "^14.7.1",
+    "discord.js-leveling": "^5.4.0",
     "dotenv": "^16.0.3",
     "libsodium-wrappers": "^0.7.10",
+    "mongoose": "^6.9.2",
     "sqlite3": "^5.1.4"
   },
   "name": "karmafans",
