--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "dependencies": {
+    "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.14.0",
+    "@distube/spotify": "^1.5.1",
     "@napi-rs/canvas": "^0.1.34",
     "ascii-table": "^0.0.9",
     "colors": "^1.4.0",
     "discord.js": "^14.8.0",
     "discord.js-leveling": "^5.4.0",
+    "distube": "^4.0.4",
     "dotenv": "^16.0.3",
-    "libsodium-wrappers": "^0.7.10",
+    "ffmpeg-static": "^4.4.1",
+    "libsodium-wrappers": "^0.7.11",
     "mongoose": "^6.9.2",
     "ms": "^2.1.3",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.4",
+    "yt-search": "^2.10.4",
+    "ytdl-core": "^4.11.3"
   },
   "name": "karmafans",
   "version": "1.0.0",
