--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^6.9.2",
     "ms": "^2.1.3",
     "sqlite3": "^5.1.4",
+    "util": "^0.12.5",
     "yt-search": "^2.10.4",
     "ytdl-core": "^4.11.3"
   },
